5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1582_1333.log
== SUBMITION (2019-03-14 12:55:11) 
-- CODE:
expressao = 
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.210456
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:55:12) 
-- CODE:
expressao = 
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:55:14) 
-- CODE:
expressao = 
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.230776
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:56:11) 
-- CODE:
expressao = 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.202957
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:56:13) 
-- CODE:
expressao = 
print(30-3**2+8//3**2*10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:56:13) 
-- CODE:
expressao = 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.182454
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 14:56:10) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print
-- EXECUTION TIME:
0.131126
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 14:56:11) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 14:56:27) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print
-- EXECUTION TIME:
0.164448
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 14:56:32) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 14:56:45) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print
-- EXECUTION TIME:
0.153905
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 14:56:45) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 14:57:16) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print
-- EXECUTION TIME:
0.204426
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 14:57:16) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print
-- EXECUTION TIME:
0.206231
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 14:57:18) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 14:57:21) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print
-- EXECUTION TIME:
0.201036
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 14:58:30) 
-- CODE:
expressao =30 - 3 ** 2 + 8 // 3 ** 2 * 10
print
-- EXECUTION TIME:
0.146238
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:35:42) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:46:03) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10

print
-- EXECUTION TIME:
0.149865
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:46:04) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10

print
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:46:10) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print
-- EXECUTION TIME:
0.166694
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:46:11) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:46:47) 
-- CODE:
expressao = 30 – 9 + 8 // 9 * 10
print
-- EXECUTION TIME:
0.134996
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 9 + 8 // 9 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:47:45) 
-- CODE:
expressao = 30 – 9 + 8 // 90
print
-- EXECUTION TIME:
0.233967
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 9 + 8 // 90
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:47:50) 
-- CODE:
expressao = 30 – 9 + 8 // 90
print
-- EXECUTION TIME:
0.128012
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 9 + 8 // 90
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:48:37) 
-- CODE:
expressao = 13 // 90
print
-- EXECUTION TIME:
0.134116
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:48:38) 
-- CODE:
expressao = 13 // 90
print
-- EXECUTION TIME:
0.132555
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:48:39) 
-- CODE:
expressao = 13 // 90
print
-- EXECUTION TIME:
0.123267
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:01:43) 
-- CODE:
expressao = 30 - 3**2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.138361
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
